# BLE_for_B2X

./: CMakeLists.txt  Kconfig  README.rst  prj.conf
boards/: nrf5340dk_nrf5340_cpuapp_ns.overlay  nrf9160dk_nrf9160_ns.overlay  thingy91_nrf9160_ns.conf
include/: beacon_module.h  ble_settings.h  gnss_module.h  scan_module.h  sdcard_module.h  uart_module.h
src/: beacon_module.c  beacon_module.h  ble_module.c  ble_module.h  gnss_module.c  gnss_module.h  main.c  scan_module.c  sdcard_module.c  uart_module.c
